<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#347703"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nameListTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:text="@string/namehere"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameListTV"
        android:layout_below="@+id/nameListTV"
        android:textColor="#ffffff"
        android:text="@string/date" />

    <RadioGroup
        android:id="@+id/attendanceRDG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="18dp"
        android:background="@drawable/layout_btn_bg" >

        <RadioButton
            android:id="@+id/presentRDO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/present" />

        <RadioButton
            android:id="@+id/absentRDO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absent" />

        <RadioButton
            android:id="@+id/leaveRDO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave" />
    </RadioGroup>

</RelativeLayout>