<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#347703"
    android:orientation="vertical"
    android:weightSum="4" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3.8"
        android:background="@drawable/layout_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/doneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/passET"
                android:layout_alignRight="@+id/classET"
                android:layout_below="@+id/passET"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_btn_bg"
                android:text="@string/save" />

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nameTV"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="@string/title" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/titleTV"
                android:layout_alignRight="@+id/nameET"
                android:layout_below="@+id/titleTV"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_tv_bg" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/spinner1"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="10dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nameTV"
                android:layout_below="@+id/nameTV"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_tv_bg"
                android:ems="10"
                android:inputType="textPersonName" >
            </EditText>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/deprttTV"
                android:layout_alignRight="@+id/nameET"
                android:layout_below="@+id/deprttTV"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_tv_bg" />

            <TextView
                android:id="@+id/classTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/nameTV"
                android:layout_below="@+id/spinner2"
                android:layout_marginTop="10dp"
                android:text="@string/cls" />

            <EditText
                android:id="@+id/subjectET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/subjectTV"
                android:layout_below="@+id/subjectTV"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_tv_bg"
                android:ems="10" >
            </EditText>

            <TextView
                android:id="@+id/passTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/passET"
                android:layout_below="@+id/subjectET"
                android:layout_marginTop="10dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/subjectET"
                android:layout_below="@+id/passTV"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_tv_bg"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>

            <TextView
                android:id="@+id/deprttTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nameET"
                android:layout_below="@+id/nameET"
                android:layout_marginTop="12dp"
                android:text="@string/deprtt" />

            <TextView
                android:id="@+id/subjectTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/spinner2"
                android:layout_below="@+id/classET"
                android:layout_marginTop="11dp"
                android:text="@string/subject" />

            <EditText
                android:id="@+id/classET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/subjectTV"
                android:layout_below="@+id/classTV"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_tv_bg"
                android:ems="10" >
            </EditText>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical" >
    </RelativeLayout>

</LinearLayout>