<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#347703"
    android:orientation="vertical"
    android:weightSum="3" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical" >
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="2.4"
        android:background="@drawable/layout_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button2"
                android:layout_below="@+id/button2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_btn_bg"
                android:text="@string/select" />

            <Button
                android:id="@+id/button4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button3"
                android:layout_below="@+id/button3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_btn_bg"
                android:text="@string/select" />

            <Button
                android:id="@+id/button5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_btn_bg"
                android:text="@string/upload" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/desc"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDesc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_btn_bg"
                android:text="@string/select" />

            <Button
                android:id="@+id/button2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button1"
                android:layout_below="@+id/button1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/layout_btn_bg"
                android:text="@string/select" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical" >
    </RelativeLayout>

</LinearLayout>